add Get Devices rest api
